# libqrz-cpp

./: CMakeLists.txt  CallLookup.cpp  README.md  callsign.cpp  credentials.cpp  qrz_utils.cpp
include/: callsign.h  credentials.h  k0hax-qrz.h  qrz_utils.h
